Реализовал сервис интерьвю + подклчил редис, сделал автогенерацию свагера
